[package]
name = "image_shower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
egui = "0.19.0"
egui_glium = "0.19.0"
egui-winit = "0.19.0"
image = "*"
reqwest = "0.11.12"
futures = "0.3.24"
#attohttpc = "0.23.1"
tokio = {version = "1.21.2", features = ["full"]}
regex = "1.6.0"